<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/topic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/textView" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="102dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/managementQuoteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/managementQuoteButton"
            app:layout_constraintTop_toBottomOf="@+id/inspiringQuoteButton" android:layout_marginBottom="48dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/inspiringQuoteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/inspiringQuoteButton"
            app:layout_constraintTop_toBottomOf="@+id/loveQuoteButton" android:layout_marginBottom="19dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/managementQuoteButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/loveQuoteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loveQuoteButton"
            app:layout_constraintTop_toBottomOf="@+id/funnyQuoteButton" android:layout_marginBottom="17dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/inspiringQuoteButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <Button
            android:text="@string/funnyQuoteButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/funnyQuoteButton"
            android:layout_marginBottom="19dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/loveQuoteButton"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="306dp"
            app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>